Make rc script more robust